<resources>
    <string name="app_name">Australian Bird Tracker</string>
    <string name="trackables_list_name">Trackables List</string>
    <string name="filter">Filter by category</string>
    <string-array name="categories">
        <item>All</item>
        <item>Bird of Prey</item>
        <item>Bush Bird</item>
        <item>Parrot</item>
        <item>Sea Bird</item>
        <item>Water Bird</item>
    </string-array>
    <string name="next_available_tracking">Next available tracking</string>
    <string name="dialog_add_tracking">Add Tracking</string>
    <string name="dialog_next_tracking">Next Tracking</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="trackings_list_name">Trackings List</string>
    <string name="add_tracking">Add tracking</string>
    <string name="trackable">Trackable</string>
    <string name="tracking_title">Title</string>
    <string name="meet_date">Date</string>
    <string name="meet_time">Meet Time</string>
    <string name="meet_location">Meet Location</string>
    <string name="current_location">Current Location</string>
    <string name="edit_tracking">Edit</string>
    <string name="remove_tracking">Remove</string>
    <string name="enter_title">Enter title</string>
    <string name="save_tracking">Save</string>
    <string name="update_tracking">Update</string>
    <string name="select_trackable">Select trackable</string>
    <string-array name="spinner_trackables">
        <item>Australian Magpie</item>
        <item>Kookaburra</item>
        <item>Sulphur-Crested Cockatoo</item>
    </string-array>
    <string name="select_meet_date">Select meeting date/time</string>
    <string-array name="meet_dates_magpie">
        <item>10/10/2018 1:10:00 PM</item>
        <item>10/10/2018 1:30:00 PM</item>
    </string-array>
    <string-array name="meet_dates_kookaburra">
        <item>10/10/2018 1:10:00 PM</item>
        <item>10/10/2018 1:35:00 PM</item>
    </string-array>
    <string-array name="meet_dates_cockatoo">
        <item>10/10/2018 1:30:00 PM</item>
        <item>10/10/2018 1:55:00 PM</item>
    </string-array>
    <string name="title_activity_edit_tracking">EditTrackingActivity</string>
    <string name="suggest_tracking">Suggest Tracking</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
