<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/next_available_tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_available_tracking"
        android:textSize="@dimen/dialog_text_size"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_margin" />
    <TextView
        android:id="@+id/next_tracking_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_text_size"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/dialog_add_tracking"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/dialog_button_height"
            android:text="@string/dialog_add_tracking"
            android:textSize="@dimen/dialog_text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            style="?android:buttonBarButtonStyle"/>
        <Button
            android:id="@+id/dialog_next_tracking"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/dialog_button_height"
            android:text="@string/dialog_next_tracking"
            android:textSize="@dimen/dialog_text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            style="?android:buttonBarButtonStyle"/>
        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/dialog_button_height"
            android:text="@string/dialog_cancel"
            android:textSize="@dimen/dialog_text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>